Add reference to bib

--- a/_analysis/references_obsidian.bib
+++ b/_analysis/references_obsidian.bib
@@ -24879,3 +24879,10 @@
   keywords = {read-notes-only},
   file = {/Users/elliotgould/Zotero/storage/7RNKUDTI/Zvereva_&_Kozlov_2021.pdf}
 }
+
+@article{mcphetres2020,
+	title = {What should a preregistration contain?},
+	author = {McPhetres, Jonathon},
+	doi = {10.31234/osf.io/cj5mh},
+	langid = {en}
+}
