--- a/_analysis/ms.qmd
+++ b/_analysis/ms.qmd
@@ -441,6 +441,89 @@ Model development and adaptive preregistration processes occurred in tandem, and
 
 ### Final Template Version & Changes
 
+```{r}
+#| label: tbl-preregistration-template-final
+#| tbl-cap: "Final version of preregistation template developed after user-testing."
+
+library(tidyverse)
+library(gt)
+prereg_tbl_data <- 
+  readr::read_csv(
+    here::here("outputs/quarto_preregistration_template.csv")
+) %>% 
+    drop_na(phase) %>% 
+    nest(.by = phase) %>% 
+    mutate(phase_id = row_number()) %>% 
+    unnest(data) %>% 
+    nest(.by = c(phase, 
+                 step)) %>% 
+    group_by(phase) %>%  
+    mutate(step_id = row_number()) %>% 
+    unnest(data) %>%  
+    ungroup %>% 
+    nest(.by = c(phase, 
+                 step, 
+                 substep)) %>% 
+    group_by(phase, step) %>% 
+    mutate(substep_id = row_number()) %>% 
+    unnest(data) %>% 
+    ungroup %>% 
+    nest(.by = c(phase, 
+                 step, 
+                 substep, 
+                 preregistration_item)) %>% 
+    group_by(phase, step, substep) %>% 
+    mutate(preregistration_item_id = row_number()) %>% 
+    unnest(data) %>% ungroup %>% 
+    nest(.by = c(phase, 
+                 step, 
+                 substep, 
+                 preregistration_item, 
+                 preregistration_subitem)) %>% 
+    group_by(phase, step, substep, preregistration_item) %>% 
+  mutate(preregistration_subitem_id = row_number()) %>% 
+    unnest(data) %>% 
+  ungroup %>%  
+    mutate(preregistration_item = 
+             case_when(preregistration_subitem_id != 1 ~ NA, 
+                       .default = preregistration_item),) %>% 
+    mutate(substep = 
+             case_when(substep_id != row_number() ~ NA, 
+                               .default = substep),
+           substep_description = 
+             case_when(substep_id != row_number() ~ NA, 
+                       .default = substep_description), 
+           .by = substep) %>% 
+    mutate(step = 
+             case_when(step_id != row_number() ~ NA, 
+                            .default = step),
+           step_description = 
+             case_when(substep_id != row_number() ~ NA, 
+                                        .default = step_description),
+           .by = step)  %>% 
+    mutate(across(everything(), ~ stringr::str_remove_all(.x, "\\*")),
+           phase = gluedown::md_bold(phase),
+           phase_description = gluedown::md_italic(phase_description),
+           across(ends_with("_id"), as.numeric))
+
+prereg_tbl_data %>% 
+    select(starts_with("phase"), starts_with("step"), starts_with("substep"), ends_with("_item"), ends_with("subitem"), everything()) %>% 
+    mutate(step = case_when(!is.na(step) ~ gluedown::md_bold(step), .default = step),
+           step_description = case_when(!is.na(step_description) ~ gluedown::md_italic(step_description), .default = step_description)) %>% 
+    gt::gt(groupname_col = c("phase", "phase_description"),
+           row_group.sep = ": ") %>% 
+    gt::cols_hide(ends_with("_id")) %>% 
+    gt::sub_missing(missing_text = "") %>% 
+    gt::text_transform(fn = function(x) map(x, gt::md), 
+                       locations = gt::cells_row_groups()) %>% 
+   gt::text_transform(fn = gt::md, 
+                       locations = gt::cells_body()) %>% 
+    gt::cols_merge(columns = c("step", "step_description"), pattern = "{1} {2}") %>% 
+    gt::cols_merge(columns = c("substep", "substep_description"), pattern = "{1} {2}") 
+```
+
+gt
+
 The template used in the VEFMAP study underwent a series of changes to both its content and visual formatting during the analysis to better suit the needs of the modellers. The preregistration template was written as an *Rmarkdown* document saved within the project GitHub repository (INSERT LINK TO DOCUMENT #todo). Using knitr (CITE) and pandoc (CITE), this document is converted to a markdown document using RStudio's `github_document` format, which is automatically rendered into HTML for viewing in the web browser by GitHub (<https://rmarkdown.rstudio.com/github_document_format.html).>
 
 Improvements to template formatting include the use of dropdown boxes to store template text. Template text was divided into a) text that describes the rationale for the inclusion of a particular preregistration section or item within the template, as well as any explanation of key terms and definitions of some modelling practice / process terms, and b) text that contains specific questions with check-boxes for researchers to address in their preregistration. Each text-type is given a different icon to help differentiate between them. The use of drop-down text-boxes with icons better differentiates template prompts and text from authors' responses to preregistration items and the VEFMAP modellers noted that these changes greatly improved readability of the preregistration document <https://github.com/egouldo/VEFMAP_VEG_Stage6/pull/75#pullrequestreview-1959017213.>
